fix spacing in answers

--- a/styles/main.css
+++ b/styles/main.css
@@ -446,7 +446,7 @@ h1 {
     transition: all 0.1s;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     text-shadow: 0 0 2px var(--accent-color);
     transition: all 0.1s;
 }
